<resources>

    <!-- base strings -->
    <string name="app_name">Ulah</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- nav item strings -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_courses">Courses</string>
    <string name="nav_item_assignments">Assignments</string>
    <string name="nav_item_settings">Settings</string>

    <!-- nav drawer strings -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_courses</item>
        <item>@string/nav_item_settings</item>
    </string-array>

    <!-- view title strings -->
    <string name="title_home">Home</string>
    <string name="title_courses">Courses</string>
    <string name="title_assignments">Assignments</string>
    <string name="title_settings">Settings</string>

    <!-- course strings -->
    <string name="course_title_label">Course Name</string>
    <string name="course_number_label">Course Number</string>
    <string name="course_day_label">Course Day</string>

    <!-- assignment strings -->
    <string name="assignment_title_label">Assignment Title</string>
    <string name="assignment_course_number_label">Course Number</string>
    <string name="assignment_due_date_label">Due Date</string>
    <string name="assignment_details_label">Details</string>

    <!-- add dialog strings -->
    <string name="add_course_option">Add Course</string>
    <string name="add_assignment_option">Add Assignment</string>
    <string name="add_course_label">Add Course</string>
    <string name="add_assignment_label">Add Assignment</string>
    <string name="add_dialog_cancel">Cancel</string>
    <string name="add_dialog_submit">Submit</string>
    <string-array name="add_dialog_choices">
        <item>@string/add_course_option</item>
        <item>@string/add_assignment_option</item>
    </string-array>

</resources>
