<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|left">

        <TextView
            android:id="@+id/course_list_item_courseNumberTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/length_small"
            android:paddingRight="@dimen/length_small"
            android:paddingTop="@dimen/length_tiny"
            android:layout_marginBottom="@dimen/length_tiny"
            android:text="@string/course_number_label" />

        <TextView
            android:id="@+id/course_list_item_titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/length_small"
            android:paddingRight="@dimen/length_small"
            android:paddingBottom="@dimen/length_tiny"
            android:text="@string/course_title_label" />

    </LinearLayout>

    <TextView
        android:id="@+id/course_list_item_dayTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|right"
        android:paddingLeft="@dimen/length_small"
        android:paddingRight="@dimen/length_small"
        android:paddingTop="@dimen/length_tiny"
        android:paddingBottom="@dimen/length_tiny"
        android:text="@string/course_day_label" />

</LinearLayout>